--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,21 +1,19 @@
-#nameandsurname{
-    background-color: rgb(221, 166, 246);
-    height: 250px;
+html, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.main-content {
+    flex: 1;
+}
+footer {
+    background-color: #c8a3ea;
+    padding: 10px;
     width: 100%;
+    height: 150px;
+    font-size: large;
     text-align: center;
-}
-#email{
-    padding: 15px;
-    margin-bottom: 10px;
-}
-#department {
-    background-color: rgb(221, 166, 246);
-    font-weight: bold;
-}
-#course {
-    background-color: rgb(221, 166, 246);
-    font-weight: bold;
-}
-#copyrightText {
-    padding: 15px;
+    margin-top: 10px; 
 }
