--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -37,54 +37,44 @@ nav {
     color: #555;
 }
 
-section {
-    padding: 20px;
-    text-align: center;
-}
-
 section h1 {
     font-size: 2.5em;
     margin-bottom: 10px;
 }
-
-section p {
-    font-size: 1.5em;
+html, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
-
+.main-content {
+    flex: 1;
+}
 footer {
-    background-color: rgb(221, 166, 246);
-    padding: 20px 0;
-    text-align: center;
-}
-
-#nameandsurname {
-    background-color: rgb(221, 166, 246);
-    padding: 15px;
-}
-
-#email, #department, #course, #copyright {
+    background-color: #c8a3ea;
     padding: 10px;
-    margin-bottom: 10px;
+    width: 100%;
+    height: 150px;
+    font-size: large;
+    text-align: center;
+    margin-top: 10px; 
 }
+.maincontainer {
+    text-align: center;
+    width:100%;
+  }
 
-#email p {
-    font-size: 1.2em;
-}
-
-#department, #course {
-    font-weight: bold;
-}
-
-#copyrightText {
-    font-size: 1em;
-}
-
-a {
-    text-decoration: none;
-    color: #441162;
-}
-
-a:hover {
-    color: #555;
-}
-
+.image-container img {
+    width: 100%;
+    max-width: 800px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    opacity: 0.5;
+  }
+.image-container p {
+    margin-top: 20px;
+    font-size: 35px;
+    color: #333;
+  }
