--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -148,8 +148,8 @@ footer a {
   }
   
   .slide-wrapper {
-    width: 5096px;  /* Adjusted for 7 images, each 728px wide (728px * 7 = 5096px) */
-    -webkit-animation: slide 21s ease infinite;  /* Adjusted timing to fit 7 images */
+    width: 5096px;  
+    -webkit-animation: slide 21s ease infinite;  
   }
   
   .slide {
@@ -161,7 +161,7 @@ footer a {
   .slide img {
     width: 100%;
     height: 100%;
-    object-fit: cover;  /* Ensure images cover the slide area without distortion */
+    object-fit: cover;  
   }
   
   @-webkit-keyframes slide {
@@ -177,35 +177,32 @@ footer a {
     100% {margin-left: -3640px;}
   }
   #naslov {
-    text-align: center; /* Center the heading text */
-    padding: 20px; /* Add some space around the heading */
-    background-color:bisque; /* Give a greenish background */
-    color: #000000; /* White text on the green background */
-    border-radius: 8px; /* Rounded corners for a modern look */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
-    margin-bottom: 20px; /* Space below the heading */
+    text-align: center; 
+    padding: 20px; 
+    background-color:bisque; 
+    color: #000000; 
+    border-radius: 8px; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px; 
 }
 
-
 #naslov h3 {
-    font-size: 2.5em; /* Make the heading large */
-    font-weight: bold; /* Ensure the heading stands out */
+    font-size: 2.5em; 
+    font-weight: bold; 
     margin: 0; 
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-
 p {
-    font-size: 1.2em; /* Slightly larger text for better readability */
-    line-height: 1.6; /* Increase line height for easier reading */
-    color: #000000; /* A slightly lighter text color */
-    margin-bottom: 15px; /* Space between paragraphs */
-    max-width: 800px; /* Limit paragraph width for better readability */
+    font-size: 1.2em; 
+    line-height: 1.6; 
+    color: #000000; 
+    margin-bottom: 15px; 
+    max-width: 800px; 
     margin-left: auto;
     margin-right: auto;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
 }
-
 
 @media (max-width: 600px) {
     #naslov h3 {
