--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,19 +1,44 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-.main-content {
-    flex: 1;
-}
 footer {
-    background-color: #c8a3ea;
+    background-color: hwb(338 56% 16%);
+    color: #fff;
+    position: relative;
+    left: 0;
+    bottom: 0;
     padding: 10px;
     width: 100%;
-    height: 150px;
-    font-size: large;
+    font-size: medium;
     text-align: center;
-    margin-top: 10px; 
+    margin-top: 10px;
+    width:fixed;
+}
+
+footer a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+
+@media (max-width: 576px) {
+    footer {
+        font-size: small;
+        padding: 15px;
+    }
+
+    footer p, footer h6 {
+        margin: 5px 0;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+    footer {
+        font-size: medium;
+        padding: 20px;
+    }
+}
+
+@media (min-width: 768px) {
+    footer {
+        font-size: large;
+        padding: 25px;
+    }
 }
