--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -1,34 +1,79 @@
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-nav {
+
+html, body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #c8a3ea;
-    padding: 20px;
-    border-bottom: 1px solid #ddd;
-    font-family: Arial, sans-serif;
+    background-color: hwb(338 56% 16%);
+    padding: 10px 20px;
+    position: relative;
+    width: 100%;
 }
-.logo {
+
+.navbar-brand img {
+    height: 80px;
     text-align: center;
-    flex: 1;
 }
+
+.menu-toggle {
+    display: none;
+}
+
+.menu-icon {
+    display: none;
+    font-size: 24px;
+    color: #441162;
+    cursor: pointer;
+}
+
 .nav-links {
     display: flex;
-    list-style: none;
     gap: 20px;
+    list-style-type: none;
 }
+
 .nav-links a {
+    color: hsl(300, 4%, 95%);
     text-decoration: none;
-    color: #441162;
     font-weight: 600;
     padding: 10px;
     transition: color 0.3s;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
 .nav-links a:hover {
-    color: #555;
+    color: hsl(276, 19%, 42%);
+}
+
+@media (max-width: 768px) {
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: #dc7ad7;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 10px 0;
+        z-index: 1;
+    }
+    
+    .menu-icon {
+        display: block;
+    }
+    
+    .menu-toggle:checked + .menu-icon + .nav-links {
+        display: flex;
+    }
 }
